Worked on scraping word definitions

--- a/psych_definitions_webscraping.ipynb
+++ b/psych_definitions_webscraping.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 928,
    "id": "c8b3ad18-972c-4c65-bb6a-4ea3e8886eab",
    "metadata": {},
    "outputs": [],
@@ -36,6 +36,8 @@
     "import numpy as np\n",
     "import html5lib\n",
     "import lxml\n",
+    "import json\n",
+    "import time\n",
     "\n",
     "import os\n",
     "\n",
@@ -791,17 +793,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 884,
    "id": "4d747855-1c98-4bb6-88b2-7a20d84544d3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://dictionary.apa.org/a-posteriori'"
+    "word = 'a-fiber'\n",
+    "url = f'https://dictionary.apa.org/{word}'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 804,
    "id": "88fb672e-2d81-4aad-9e6b-6a9b72e9efca",
    "metadata": {},
    "outputs": [],
@@ -813,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 805,
    "id": "c8505304-2ccf-40be-95a6-d2480a64211d",
    "metadata": {},
    "outputs": [],
@@ -823,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 885,
    "id": "51338b32-6b73-40b0-b9ca-514ceb9262a7",
    "metadata": {},
    "outputs": [],
@@ -833,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 886,
    "id": "e4e349a4-6c8b-47fd-8c22-f3174734aea0",
    "metadata": {},
    "outputs": [],
@@ -841,45 +844,60 @@
     "# definition = []\n",
     "# for text in soup.find('dd'):\n",
     "#     definition.append(text.get_text())\n",
-    "# definition = ''.join(definition)"
+    "#     definition = [''.join(definition)]\n",
+    "# for text in soup.find('hw'):\n",
+    "#     text = text.get_text()\n",
+    "#     definition.insert(0, text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 892,
    "id": "880d4189-f351-4c8e-beb4-64eabbcd09ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "definition = []\n",
-    "for text in soup.find('dd'):\n",
-    "    definition.append(text.get_text())\n",
-    "    definition = [''.join(definition)]\n",
-    "for text in soup.find('hw'):\n",
-    "    text = text.get_text()\n",
-    "    definition.insert(0, text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 639,
-   "id": "a684baae-03d6-429d-b621-70a1e2579a78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['a posteriori',\n",
-       " 'denoting conclusions derived from observations or other manifest occurrences: reasoning from facts. Compare a priori. [Latin, “from the latter”]']"
+       "{'a_definitions_dict': [[{'a-fiber': {'term': 'A fiber',\n",
+       "     'definition': 'a myelinated nerve fiber (axon) of the somatosensory system. A fibers are subdivided by diameter, ranging from largest to smallest: A-alpha fibers are 13 to 20 μm in diameter and transmit information from proprioceptors of skeletal muscles, A-beta fibers are 6 to 12 μm and transmit information from mechanoreceptors of the skin, and A-delta fibers are 1 to 5 μm and transmit temperature and sharp pain information. See also B fiber; C fiber.'}}]]}"
       ]
      },
-     "execution_count": 639,
+     "execution_count": 892,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "definition"
+    "definition = []\n",
+    "for text in soup.find('dd'):\n",
+    "    definition.append(text.get_text())\n",
+    "    definition = [''.join(definition)]\n",
+    "for term in soup.find('hw'):\n",
+    "    term = term.get_text()\n",
+    "    \n",
+    "example_dict = {'a_definitions_dict': [[{f\"{word}\": {\"term\": f\"{term}\",\n",
+    "                                                     \"definition\": f\"{definition[0]}\",},},],\n",
+    "                                      ],\n",
+    "               }\n",
+    "example_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 893,
+   "id": "57e5df38-2b4b-4393-8ca9-a67edb76835a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example = {'a_definitions_dict': [[{'a-priori' : {\"term\": \"a priori\",\n",
+    "#                                                 \"definition\": \"prior knowledge\",},},],\n",
+    "#                                   [{'a-posteriori': {\"term\": \"a posteriori\",\n",
+    "#                                                     \"definition\": \"after knowledge\",},},],\n",
+    "#                                   [{'word': {\"term\": \"<term>\",\n",
+    "#                                              \"definition\": \"<definition>\",},},],],\n",
+    "#           }\n",
+    "# json.dumps(example)"
    ]
   },
   {
@@ -1026,9 +1044,9 @@
     "        for word in soup.find_all('a'):\n",
     "            list_of_words.append(word.get('href'))\n",
     "        [list_of_words.remove(i) for i in list_of_words if i == None]\n",
-    "        globals()['df'][f'{char}'] = pd.Series([i for i in list_of_words if i[0:4] != 'http' if i[0] == f'{char}'])\n",
+    "        globals()[f'{char}_df'][f'{char}'] = pd.Series([i for i in list_of_words if i[0:4] != 'http' if i[0] == f'{char}'])\n",
     "        print(f\"Finished getting words for character: {char}\")\n",
-    "        print(globals()['df'][f'{char}'].head())\n",
+    "        print(globals()[f'{char}_df'][f'{char}'].head())\n",
     "        print()\n",
     "        \n",
     "    list_of_words = []\n",
@@ -1042,9 +1060,9 @@
     "        for word in soup.find_all('a'):\n",
     "            list_of_words.append(word.get('href'))\n",
     "        [list_of_words.remove(i) for i in list_of_words if i == None ]\n",
-    "        globals()['df'][f'{char}'.replace('-', '_')] = pd.Series([i for i in list_of_words if i[0] != '/' if i[0:4] != 'http'])\n",
+    "        globals()[f'{char}_df'][f'{char}'.replace('-', '_')] = pd.Series([i for i in list_of_words if i[0] != '/' if i[0:4] != 'http'])\n",
     "        print(f\"Finished getting words for character: {char}\")\n",
-    "        print(globals()['df'][f'{char}'.replace('-', '_')].head())\n",
+    "        print(globals()[f'{char}_df'][f'{char}'.replace('-', '_')].head())\n",
     "        print()\n",
     "\n",
     "    return df"
@@ -1718,21 +1736,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 993,
    "id": "7c2416bd-ae28-4b3f-8a4f-866aee2e6dcd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_definitions(df=df):\n",
     "    driver = webdriver.Chrome('/usr/lib/chromium-browser/chromedriver')\n",
+    "#     sleep = time.sleep(5)\n",
+    "#     sleep\n",
     "    \n",
-    "    globals(['definitions_df']) = {}\n",
-    "    for col in df:\n",
-    "        for word in col:\n",
+    "    for col in df.columns[6]:     \n",
+    "        print(f\"Creating '{col}_definitions_dict'\") \n",
+    "        globals()[f'{col}_definitions_dict'] = {}\n",
+    "#         sleep\n",
+    "        \n",
+    "        dictionary_list = []\n",
+    "        for index, word in df[col][:5].items():\n",
     "            print(f\"Getting definition for: {word}\")\n",
     "            url = f'https://dictionary.apa.org/{word}'\n",
     "            driver.delete_all_cookies()\n",
+    "            driver.implicitly_wait(10)\n",
     "            driver.get(url)\n",
+    "            \n",
     "            c = driver.page_source\n",
     "            soup = BeautifulSoup(c, \"html.parser\")\n",
     "            \n",
@@ -1740,12 +1768,126 @@
     "            for text in soup.find('dd'):\n",
     "                definition.append(text.get_text())\n",
     "                definition = [''.join(definition)]\n",
-    "            for text in soup.find('hw'):\n",
-    "                text = text.get_text()\n",
-    "                definition.insert(0, text)\n",
+    "            for term in soup.find('hw'):\n",
+    "                term = term.get_text()\n",
     "                \n",
-    "    return definitions_df"
+    "            dictionary = {\"term\": f\"{term}\",\n",
+    "                          \"definition\": f\"{definition[0]}\",}\n",
+    "            dict_list = [{f'{word}': dictionary}]\n",
+    "            dictionary_list.append(dict_list)\n",
+    "            #print(f\"Added {word} and definition to '{col}_definitions_dict'\")\n",
+    "            print(dictionary_list)\n",
+    "\n",
+    "#             sleep\n",
+    "            \n",
+    "        globals()[f'{col}_definitions_dict'] = dictionary_list\n",
+    "\n",
+    "    print(\"Created <col>_definitions_dict's\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 994,
+   "id": "54b56bd4-62e0-47d1-b34a-839fa50a65bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating 'g_definitions_dict'\n",
+      "Getting definition for: g\n",
+      "[[{'g': {'term': 'strange-hand sign', 'definition': 'symbol for general factor.'}}]]\n",
+      "Getting definition for: g-m2-gangliosidosis\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-994-09c1f21956b0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_definitions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-993-6230953974d9>\u001b[0m in \u001b[0;36mget_definitions\u001b[0;34m(df)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0mdefinition\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m             \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'dd'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m                 \u001b[0mdefinition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m                 \u001b[0mdefinition\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdefinition\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "get_definitions(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 995,
+   "id": "10073899-0931-4cdb-9c3a-658c838a55b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 995,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g_definitions_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 940,
+   "id": "30e5cf74-36cb-4592-8a71-b5e06a15cafa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a_definitions_dict': [[{'a-fiber': {'term': 'A fiber',\n",
+       "     'definition': 'a myelinated nerve fiber (axon) of the somatosensory system. A fibers are subdivided by diameter, ranging from largest to smallest: A-alpha fibers are 13 to 20 μm in diameter and transmit information from proprioceptors of skeletal muscles, A-beta fibers are 6 to 12 μm and transmit information from mechanoreceptors of the skin, and A-delta fibers are 1 to 5 μm and transmit temperature and sharp pain information. See also B fiber; C fiber.'}}]]}"
+      ]
+     },
+     "execution_count": 940,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "example_dict = {'a_definitions_dict': [[{f\"{word}\": {\"term\": f\"{term}\",\n",
+    "                                                     \"definition\": f\"{definition[0]}\",},},\n",
+    "                                        {f\"{word}\": {\"term\": f\"{term}\",\n",
+    "                                                     \"definition\": f\"{definition[0]}\",},},],\n",
+    "                                      ],\n",
+    "               }\n",
+    "example_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 779,
+   "id": "8e8bea11-ad3b-45b1-888b-3811cb83e47a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for col in df.columns[:2]:\n",
+    "#     print(col)\n",
+    "#     for index, word in df[col][:10].items():\n",
+    "#         print(word)\n",
+    "# #         print(f\"Getting definition for: {word}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8515dfd3-dce5-4161-b731-68e4a8467545",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
